bk_ida/gccida/g0/check_dbra_loop
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8361:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+3Ch] [rbp-124h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8363:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+4Ch] [rbp-114h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8382:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code cmp_code; // [rsp+E0h] [rbp-80h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8389:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+110h] [rbp-50h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8389:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+110h] [rbp-50h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8400:19: error: expected identifier or '('
 struct loop_info = (  struct loop_info *)loop->aux; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8405:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
jump = ( rtx)loop_end[1]; 
             ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8441:42: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
|| *( _WORD *)comparison == 102 && ( rtx)comparison[1] == const_int_rtx[64]) 
                                         ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8457:58: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( p = loop_start; p && *( _WORD *)p != 36; p = ( rtx)p[1] ) 
                                                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8466:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)before_comparison[1] == const_int_rtx[64] 
         ^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8496:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = **( _WORD **)&p[2] == 47 ? (  struct rtx_def *)p[2] : single_set_2( p, *( rtx *)&p[2]); 
                                                    ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8497:13: error: expected identifier or '('
 struct set = v6; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8543:1: error: use of undeclared identifier 'v'
v = bl_0->giv; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8566:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
comparison_value = ( rtx)comparison[1]; 
                         ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8687:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8693:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( tem = ( rtx)loop_end[1]; tem && *( _WORD *)tem != 33; tem = ( rtx)tem[1] ) 
                  ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8693:73: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( tem = ( rtx)loop_end[1]; tem && *( _WORD *)tem != 33; tem = ( rtx)tem[1] ) 
                                                                        ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8710:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = **( _WORD **)&p[2] == 47 ? (  struct rtx_def *)p[2] : single_set_2( p, *( rtx *)&p[2]); 
                                                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/loop.c:8724:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
*pnote = ( rtx)( *pnote)[1]; 
               ^~~~~~~~~~~~
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_dbra_loop/src/obj/loop.o] Error 1
